# text-engine

./: COPYING  Cargo.toml  README.md  TODO.txt  build.zig  com.mattjakeman.DocumentEngine.Demo.json  com.mattjakeman.TextEngine.Demo.json  meson.build
.github/workflows/: c-cpp.yml
demo/: demo.c  demo.html  meson.build  parser.c  parser.h  resources.gresource.xml  style.css  widget.c  widget.h
engine/: Cargo.toml
engine/src/: cursor.rs  layout.rs  lib.rs  model.rs  style.rs  table.rs
engine/src/model/: block.rs  fragment.rs  frame.rs  paragraph.rs  run.rs
ports/gtk/: Cargo.toml  main.c
ports/gtk/src/: display.rs  main.rs
ports/gtk/src/display/: imp.rs
src/: document-engine-version.h.in  document-engine.c  document-engine.h  main.rs  meson.build  table.rs  text-engine-version.h.in  text-engine.c  text-engine.h
src/delta/: README.md  delta.c  delta.h  meson.build  operation.c  operation.h
src/editor/: editor.c  editor.h  meson.build
src/format/: import-html.c  import.h  meson.build
src/layout/: README.md  layout-box.c  layout-box.h  layout.c  layout.h  layoutblock.c  layoutblock.h  layoutbox-impl.h  layoutbox.c  layoutbox.h  layoutinline.c  layoutinline.h  meson.build  types.h
src/model/: README.md  base.c  base.h  block.c  block.h  document.c  document.h  fragment.c  fragment.h  frame.c  frame.h  image.c  image.h  inline.c  inline.h  item.c  item.h  mark.c  mark.h  meson.build  node-block.c  node-block.h  node-inline.c  node-inline.h  node.c  node.h  opaque.c  opaque.h  paragraph.c  paragraph.h  run.c  run.h
src/tree/: README.md  meson.build  node.c  node.h
src/ui/: display.c  display.h  inspector.c  inspector.h  meson.build  resources.gresource.xml  style.css
test/: delete.c  delta.c  insert.c  mark.c  meson.build  move.c  replace.c  split.c
