text_engine_sources += files([
  'item.c',
  'run.c',
  'block.c',
  'frame.c',
  'paragraph.c',
  'mark.c',
  'document.c',
  'fragment.c',
  'image.c'
])

model_headers = [
  'item.h',
  'run.h',
  'block.h',
  'frame.h',
  'paragraph.h',
  'mark.h',
  'document.h',
  'fragment.h',
  'image.h'
]

install_headers(model_headers, subdir : header_dir / 'model')
